[project]
name = "rebalanced"
version = "0.1.0"
description = "A Python framework for market simulation and investment strategy modeling, built from composable primitives"
readme = "README.md"
requires-python = ">=3.14"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
    { name = "Vashistha Iyer", email = "iy3rvashistha@gmail.com" },
]
keywords = ["finance", "trading", "simulation", "backtesting", "portfolio", "market", "fsm", "state-machine", "event-driven"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "rebalanced-core",
    "rebalanced-fsm",
]

[project.urls]
Homepage = "https://github.com/iy3r/rebalanced"
Repository = "https://github.com/iy3r/rebalanced"
Issues = "https://github.com/iy3r/rebalanced/issues"

[dependency-groups]
dev = [
    "matplotlib>=3.10.8",
    "polars>=1.39.3",
    "pytest>=9.0.2",
    "ruff>=0.15.9",
    "twine>=6.2.0",
    "ty>=0.0.28",
]

[build-system]
requires = ["uv_build>=0.11.3,<0.12"]
build-backend = "uv_build"

[tool.uv.sources]
rebalanced-core = { workspace = true }
rebalanced-fsm = { workspace = true }

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.build-backend]
module-name = "rebalanced"

[tool.ruff]
line-length = 88
target-version = "py314"
